# pantry

./: .gitignore  Cargo.toml  Containerfile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/css/: styles.css
assets/js/: list-checker.js  screen-wake.js  section-collapser.js  theme-switcher.js
sass/: styles.sass
src/: assets.rs  fswatch.rs  main.rs  markdown.rs  recipe.rs  routes.rs  search.rs  templates.rs
templates/: _layout.html  _search_bar.html  recipe.html  recipe_index.html  search.html
ts/: screen-wake.ts  table-sort.ts  theme-switcher.ts
