[package]
name = "pantry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0"
askama_axum = "0"
axum = "0"
clap = { version = "4", features = ["derive", "env"] }
comrak = "0"
dirs = "5"
macro_rules_attribute = "0"
mime_guess = "2"
notify = "6"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
scraper = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0"
smol = "2"
smol-axum = { version = "0", features = ["async-net"] }
smol-macros = "0"
thiserror = "1"
toml = "0.8.19"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"]}
url = { version = "2", features = ["serde"] }
walkdir = "2"
xapian-rs = "0.2.0"
yaml-front-matter = "0"
